--- a/backend/config/es-config.yml
+++ b/backend/config/es-config.yml
@@ -19,10 +19,10 @@ agens:
     base-path: /api
     query-timeout: 600000       # 1000 ms = 1 sec
   elasticsearch:
-    host: 27.117.163.21
-    port: 15619
-    # host: 192.168.0.54
-    # port: 8087
+#    host: 27.117.163.21
+#    port: 15619
+    host: 192.168.0.54
+    port: 8087
     username:
     password:
     scroll-limit: -1            # -1(unlimit) or more than 2500
@@ -35,3 +35,5 @@ agens:
     name: agenspop-es
     version: 0.7.3-dev
     hello-msg: agenspop-elasticgraph v1.0 (since 2019-08-01)
+  front:
+    debug: false                # display elapsedTimes of Visualization(Workspace) about loading, rendering
