--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -54,7 +54,7 @@
                             <goal>npm</goal>
                         </goals>
                         <configuration>
-                            <arguments>run build</arguments>
+                            <arguments>run product</arguments>
                         </configuration>
                     </execution>
 
