--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -37,4 +37,4 @@ agens:
     hello-msg: agenspop-elasticgraph v1.0 (since 2019-08-01)
   front:
     debug: true                 # display elapsedTimes of Visualization(Workspace) about loading, rendering
-    init-mode: canvas           # initial screen-mode: webgl(default) or canvas
+    init-mode: webgl            # initial screen-mode: webgl(default) or canvas
