--- a/frontend/src/main/frontend/package.json
+++ b/frontend/src/main/frontend/package.json
@@ -51,7 +51,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.14",
+    "@angular-devkit/build-angular": "~0.803.22",
     "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
@@ -72,5 +72,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
+  },
+  "resolutions": {
+    "@babel/preset-env": "^7.8.7",
+    "@babel/compat-data": "~7.8.0"
   }
 }
