--- a/frontend/src/main/frontend/package.json
+++ b/frontend/src/main/frontend/package.json
@@ -51,10 +51,12 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.22",
+    "@angular-devkit/build-angular": "~0.803.25",
     "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
+    "@babel/compat-data": "^7.8.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
     "@types/d3-scale": "2.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
@@ -72,9 +74,5 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
-  },
-  "resolutions": {
-    "@babel/preset-env": "^7.8.7",
-    "@babel/compat-data": "~7.8.0"
   }
 }
