--- a/frontend/src/main/frontend/package.json
+++ b/frontend/src/main/frontend/package.json
@@ -51,11 +51,10 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.25",
+    "@angular-devkit/build-angular": "~0.803.17",
     "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
-    "@babel/compat-data": "^7.8.0",
     "@babel/plugin-proposal-numeric-separator": "^7.8.3",
     "@types/d3-scale": "2.1.1",
     "@types/jasmine": "~3.3.8",
@@ -70,9 +69,13 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "ngx-typeahead": "^6.2.0",
+    "npm-force-resolutions": "0.0.3",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
+  },
+  "resolutions": {
+    "@babel/preset-env": "^7.8.7"
   }
 }
