--- a/frontend/src/main/frontend/package.json
+++ b/frontend/src/main/frontend/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ap-workspace",
-  "version": "0.0.0",
+  "version": "0.7.2",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "product": "npx npm-force-resolutions && npm i --no-audit && ng build --prod",
+    "product": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
