--- a/backend/config/es-config.yml
+++ b/backend/config/es-config.yml
@@ -22,21 +22,19 @@ agens:
     base-path: /api
     query-timeout: 600000       # 1000 ms = 1 sec
   elasticsearch:
-#    host: 27.117.163.21
-#    port: 15619
-    host: 192.168.0.54
-    port: 8087
-    username:
-    password:
+    host: 192.168.0.30
+    port: 39200
+    username: elastic
+    password: bitnine
     scroll-limit: -1            # -1(unlimit) or more than 2500
-    vertex-index: elasticvertex
-    edge-index: elasticedge
+    vertex-index: agensvertex
+    edge-index: agensedge
     edge-validation: false      # if true, check valid edge on each request (make slow)
-    index-shards: 2             # when create index, apply to setting
+    index-shards: 1             # when create index, apply to setting
     index-replicas: 0           # when create index, apply to setting
   product:
     name: agenspop-es
-    version: 0.7.3-dev
+    version: 0.7.3
     hello-msg: agenspop-elasticgraph v1.0 (since 2019-08-01)
   front:
     debug: false                # display elapsedTimes of Visualization(Workspace) about loading, rendering
