--- a/frontend/src/main/frontend/angular.json
+++ b/frontend/src/main/frontend/angular.json
@@ -94,7 +94,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "ap-workspace:build",
-            "host": "127.0.0.1",
+            "host": "localhost",
             "port": 8082
           },
           "configurations": {
