--- a/frontend/src/main/frontend/package.json
+++ b/frontend/src/main/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "ap-workspace",
   "version": "0.7.2",
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -39,13 +38,13 @@
     "cytoscape-undo-redo": "^1.3.2",
     "d3-scale": "^3.2.1",
     "elgrapho": "^2.4.0",
-    "gaussian": "^1.1.0",
+    "gaussian": "^1.2.0",
     "jquery": "^3.4.1",
     "layout-base": "1.0.2",
     "lodash": "^4.17.15",
-    "ngx-contextmenu": "^5.2.0",
+    "ngx-contextmenu": "^5.4.0",
     "ngx-spinner": "^8.0.3",
-    "popper.js": "^1.16.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.2",
     "tippy.js": "^4.3.5",
     "tslib": "^1.10.0",
@@ -56,6 +55,7 @@
     "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
+    "@babel/preset-env": "^7.12.11",
     "@types/d3-scale": "2.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
@@ -75,6 +75,10 @@
     "typescript": "~3.5.3"
   },
   "resolutions": {
-    "@babel/preset-env": "^7.8.7"
-  }
+    "@babel/preset-env": "^7.12.11"
+  },
+  "main": "karma.conf.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
